# tree-sitter-angelscript

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_angelscript/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterAngelscriptTests/: TreeSitterAngelscriptTests.swift
src/: grammar.json  node-types.json  parser.c
test/corpus/: arrays_and_handles.txt  classes.txt  comments.txt  enums.txt  expressions.txt  function_attributes.txt  functions.txt  imports_and_typedefs.txt  initialization.txt  interfaces.txt  literals.txt  mixins.txt  multiple_declarations.txt  namespaces.txt  primitive_types.txt  statements.txt  type_qualifiers.txt  virtual_properties.txt
